data/Java/08-bad-invocation/1/[M]Error.txt
http://cs-people.bu.edu/dgs/courses/cs111-old/assignments/errors.html
Test.java:3: error: cannot find symbol
        int ret_code = my_method;
                       ^